# NES-Emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  check.py  main  main.cc  notes.md
include/: common.hpp  cpu.hpp
script/: check.py
src/: cpu.cc  main.cc  util.cc
